dynamix/force-app/main/default/objects/Booking_Offer__c/Booking_Offer__c.object-meta.xml
<CustomObject>
    <label>Project Offer</label>
    <nameField>
        <label>Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>