dynamix/force-app/main/default/objects/Booking_Offer__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF(AND(Start_Date__c&lt;=TODAY(),End_Date__c&gt;=TODAY(),TEXT(Approval_Status__c)==&apos;Approved&apos;) ,true,false)</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>