dynamix/force-app/main/default/objects/Booking_Offer__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Booking Offers</relationshipLabel>
    <relationshipName>Booking_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>