dynamix/force-app/main/default/objects/Booking_Offer__c/fields/Sub_Offer__c.field-meta.xml
<CustomField>
    <fullName>Sub_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Offer</label>
    <referenceTo>Booking_Offer__c</referenceTo>
    <relationshipLabel>Booking Offers</relationshipLabel>
    <relationshipName>Booking_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>