dynamix/force-app/main/default/objects/Booking_Offer__c/validationRules/Validate_Start_Date_and_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Start_Date_and_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c  &gt;  End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>You can not set End Date smaller than Start Date</errorMessage>
</ValidationRule>