dynamix/force-app/main/default/objects/Booking_Offer__c/listViews/S_M_Head_Queue_Booking_Offer.listView-meta.xml
<ListView>
    <fullName>S_M_Head_Queue_Booking_Offer</fullName>
    <filterScope>Queue</filterScope>
    <label>S&amp;M Head Queue</label>
    <queue>S_M_Head_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>