dynamix/force-app/main/default/objects/Booking_Offer__c/listViews/Site_Head_Queue_Booking_Offer.listView-meta.xml
<ListView>
    <fullName>Site_Head_Queue_Booking_Offer</fullName>
    <filterScope>Queue</filterScope>
    <label>Site Head Queue</label>
    <queue>Site_Head_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>